Complete UI for the book list

--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./styles/style.css">
     <title>Book List</title>
 </head>
 <body>
+    <div class="container">
+        <h1>Add Book</h1>
+        <div class="alert">
+            <p>Error placeholder</p>
+        </div>
+        <form action="">
+            <label for="bookTitle">Book Title</label>
+            <input type="text" name="bookTitle" id="bookTitle">
+            <label for="author">Author</label>
+            <input type="text" name="author" id="author">
+            <label for="isbn">ISBN</label>
+            <input type="text" name="isbn" id="isbn">
+            <button>Submit</button>
+        </form>
+        <hr>
+        <table>
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>ISBN</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dummy Data</td>
+                    <td>Dummy Data</td>
+                    <td>Dummy Data</td>
+                    <td class="delete"><span class="material-symbols-outlined">delete</span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
