--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Add Book</h1>
-        <div class="alert">
-            <p>Error placeholder</p>
-        </div>
+        <h1 id="heading">Add Book</h1>
         <form action="">
             <label for="bookTitle">Book Title</label>
             <input type="text" name="bookTitle" id="bookTitle">
@@ -22,7 +19,7 @@
             <input type="text" name="author" id="author">
             <label for="isbn">ISBN</label>
             <input type="text" name="isbn" id="isbn">
-            <button>Submit</button>
+            <button id="submit">Submit</button>
         </form>
         <hr>
         <table>
@@ -34,13 +31,7 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Dummy Data</td>
-                    <td>Dummy Data</td>
-                    <td>Dummy Data</td>
-                    <td class="delete"><span class="material-symbols-outlined">delete</span></td>
-                </tr>
+            <tbody id="booksTable">
             </tbody>
         </table>
     </div>
